refactor: use getattr(linear_model, regressor) to remove redundancy
We don't need to write names of regressors twice by using getattr.
It's fancy. Also, in this commit, I rearranged some comments.

--- a/howto/model06_code_clean_up.ipynb
+++ b/howto/model06_code_clean_up.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 138,
    "metadata": {
     "collapsed": true
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 139,
    "metadata": {
     "collapsed": false
    },
@@ -144,7 +144,7 @@
        "  'question': \"This painter's indulgence of visual fantasy, and appreciation of different historic architectural styles can be seen in his 1840 Architect's Dream. After a series of paintings on The Last of the Mohicans, he made a three year trip to Europe in 1829, but he is better known for a trip four years earlier in which he journeyed up the Hudson River to the Catskill Mountains. FTP, name this painter of The Oxbow and The Voyage of Life series.\"})"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 140,
    "metadata": {
     "collapsed": false
    },
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 141,
    "metadata": {
     "collapsed": false
    },
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 142,
    "metadata": {
     "collapsed": false
    },
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 143,
    "metadata": {
     "collapsed": false
    },
@@ -337,7 +337,7 @@
     }
    ],
    "source": [
-    "from sklearn.linear_model import LinearRegression, Ridge, Lasso, ElasticNet\n",
+    "from sklearn import linear_model\n",
     "from sklearn.cross_validation import train_test_split, cross_val_score\n",
     "import math\n",
     "from numpy import abs, sqrt\n",
@@ -351,7 +351,7 @@
     "\"\"\"\n",
     "print \"=== Linear Cross validation RMSE scores:\"\n",
     "for regressor in regressor_names.split():\n",
-    "    scores = cross_val_score(globals()[regressor](), X_train, Y_train, cv=10,\\\n",
+    "    scores = cross_val_score(getattr(linear_model, regressor)(), X_train, Y_train, cv=10,\\\n",
     "                             scoring='mean_squared_error')\n",
     "    print regressor, sqrt(abs(scores)).mean()"
    ]
@@ -372,14 +372,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 149,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'category': 'physics', 'uid': '62', 'qid': '113722', 'avg_pos_uid': 31.233590733590734, 'q_length': 112, 'answer': 'ferromagnetism', 'avg_pos_qid': 113.0}\n",
+      "{'category': 'mathematics', 'uid': '131', 'qid': '9967', 'avg_pos_uid': 36.31506849315068, 'q_length': 104, 'answer': 'david hilbert', 'avg_pos_qid': 15.571428571428571}\n",
+      "{'category': 'literature', 'uid': '20', 'qid': '103709', 'avg_pos_uid': 55.74681753889675, 'q_length': 121, 'answer': 'duino elegies', 'avg_pos_qid': 41.74693710638917}\n",
+      "{'category': 'literature', 'uid': '115', 'qid': '4841', 'avg_pos_uid': 63.7429718875502, 'q_length': 101, 'answer': 'light in august', 'avg_pos_qid': 35.23076923076923}\n",
+      "{'category': 'fine arts', 'uid': '6', 'qid': '1', 'avg_pos_uid': 36.80373831775701, 'q_length': 77, 'answer': 'thomas cole', 'avg_pos_qid': 51.0}\n",
+      "{'category': 'social studies', 'uid': '64', 'qid': '113725', 'avg_pos_uid': 62.46045694200352, 'q_length': 147, 'answer': 'karl marx', 'avg_pos_qid': 101.33333333333333}\n",
+      "{'category': 'mathematics', 'uid': '45', 'qid': '9972', 'avg_pos_uid': 55.51875, 'q_length': 108, 'answer': 'quicksort', 'avg_pos_qid': -87.0}\n",
+      "{'category': 'literature', 'uid': '43', 'qid': '5408', 'avg_pos_uid': 33.85839160839161, 'q_length': 92, 'answer': 'midnights children', 'avg_pos_qid': 55.4}\n",
+      "{'category': 'social studies', 'uid': '119', 'qid': '108613', 'avg_pos_uid': 58.797814207650276, 'q_length': 108, 'answer': 'beowulf', 'avg_pos_qid': 77.77777777777777}\n",
+      "{'category': 'literature', 'uid': '12', 'qid': '5', 'avg_pos_uid': 31.45751633986928, 'q_length': 74, 'answer': 'swing', 'avg_pos_qid': 75.0}\n"
+     ]
+    }
+   ],
    "source": [
     "X_train = featurize(train_set, get_avg_pos(train_set))\n",
     "X_test = featurize(test_set, get_avg_pos(train_set))\n",
+    "for x in X_test[:10]:\n",
+    "    print x\n",
     "\n",
     "X_train_length = len(X_train)\n",
     "X = vec.fit_transform(X_train + X_test)\n",
@@ -388,8 +407,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing model(Prediction)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 150,
    "metadata": {
     "collapsed": false
    },
@@ -402,7 +428,7 @@
        "   selection='cyclic', tol=0.0001, warm_start=False)"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,15 +439,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Testing model(Prediction)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 133,
    "metadata": {
     "collapsed": false
    },
@@ -443,7 +462,7 @@
        " [35, 74.678727574716788]]"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 134,
    "metadata": {
     "collapsed": true
    },
