NLP01: give what NE type is

--- a/howto/NLP01_find_proper_noun.ipynb
+++ b/howto/NLP01_find_proper_noun.ipynb
@@ -346,8 +346,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NE Type\n",
+    "\n",
+    "|NE Type|Examples|\n",
+    "|----------|------:|\n",
+    "|ORGANIZATION|Georgia-Pacific Corp., WHO|\n",
+    "|PERSON|Eddy Bonte, President Obama|\n",
+    "|LOCATION|Murray River, Mount Everest|\n",
+    "|DATE|June, 2008-06-29|\n",
+    "|TIME|two fifty a m, 1:30 p.m.|\n",
+    "|MONEY|175 million Canadian Dollars, GBP 10.40|\n",
+    "|PERCENT|twenty pct, 18.75 %|\n",
+    "|FACILITY|Washington Monument, Stonehenge|\n",
+    "|GPE|South East Asia, Midlothian|"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 199,
    "metadata": {
     "collapsed": false
    },
@@ -356,105 +375,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('He', 'PRP')\n",
-      "('was', 'VBD')\n",
-      "('born', 'VBN')\n",
-      "('in', 'IN')\n",
-      "(GPE Normandy/NNP)\n",
-      "== GPE Normandy\n",
-      "(',', ',')\n",
-      "('but', 'CC')\n",
-      "('spent', 'VBD')\n",
-      "('most', 'RBS')\n",
-      "('of', 'IN')\n",
-      "('his', 'PRP$')\n",
-      "('life', 'NN')\n",
-      "('in', 'IN')\n",
-      "(GPE Rome/NNP)\n",
-      "== GPE Rome\n",
-      "(',', ',')\n",
-      "('where', 'WRB')\n",
-      "(PERSON Domenichino/NNP)\n",
-      "== PERSON Domenichino\n",
-      "('briefly', 'RB')\n",
-      "('employed', 'VBN')\n",
-      "('him', 'PRP')\n",
-      "('.', '.')\n",
-      "('Rejecting', 'VBG')\n",
-      "('the', 'DT')\n",
-      "(GPE Baroque/NNP)\n",
-      "== GPE Baroque\n",
-      "(',', ',')\n",
-      "('he', 'PRP')\n",
-      "('chose', 'VBD')\n",
-      "('to', 'TO')\n",
-      "('model', 'VB')\n",
-      "('his', 'PRP$')\n",
-      "('work', 'NN')\n",
-      "('after', 'IN')\n",
-      "(GPE Titian/NNP)\n",
-      "== GPE Titian\n",
-      "('and', 'CC')\n",
-      "(GPE Raphael/NNP)\n",
-      "== GPE Raphael\n",
-      "('.', '.')\n",
-      "('Under', 'IN')\n",
-      "(PERSON Charles/NNP LeBrun/NNP)\n",
-      "== PERSON Charles LeBrun\n",
-      "('in', 'IN')\n",
-      "('the', 'DT')\n",
-      "('1660', 'CD')\n",
-      "(\"'s\", 'POS')\n",
-      "(',', ',')\n",
-      "('the', 'DT')\n",
-      "(GPE French/JJ)\n",
-      "== GPE French\n",
-      "(ORGANIZATION Academy/NNP)\n",
-      "== ORGANIZATION Academy\n",
-      "('would', 'MD')\n",
-      "('take', 'VB')\n",
-      "('his', 'PRP$')\n",
-      "('ideas', 'NNS')\n",
-      "('on', 'IN')\n",
-      "('Classicism', 'NNP')\n",
-      "('as', 'IN')\n",
-      "('a', 'DT')\n",
-      "('primary', 'JJ')\n",
-      "('reference', 'NN')\n",
-      "('.', '.')\n",
-      "('FTP', 'NNP')\n",
-      "(',', ',')\n",
-      "('name', 'VBD')\n",
-      "('this', 'DT')\n",
-      "('painter', 'NN')\n",
-      "('of', 'IN')\n",
-      "('Et', 'NNP')\n",
-      "('in', 'IN')\n",
-      "(GPE Arcadia/NNP)\n",
-      "== GPE Arcadia\n",
-      "('Ego', 'NNP')\n",
-      "('and', 'CC')\n",
-      "('The', 'DT')\n",
-      "(ORGANIZATION Burial/NNP)\n",
-      "== ORGANIZATION Burial\n",
-      "('of', 'IN')\n",
-      "(GPE Phocion/NNP)\n",
-      "== GPE Phocion\n",
-      "('.', '.')\n"
+      "GPE Normandy\n",
+      "GPE Rome\n",
+      "PERSON Domenichino\n",
+      "GPE Baroque\n",
+      "GPE Titian\n",
+      "GPE Raphael\n",
+      "PERSON Charles LeBrun\n",
+      "CD 1660\n",
+      "GPE French\n",
+      "ORGANIZATION Academy\n",
+      "GPE Arcadia\n",
+      "ORGANIZATION Burial\n",
+      "GPE Phocion\n"
      ]
     }
    ],
    "source": [
     "import nltk\n",
     "\n",
-    "def extract_entities(text):\n",
+    "def extract_entities(text, all=True):\n",
     "    for sent in nltk.sent_tokenize(text):\n",
     "        for chunk in nltk.ne_chunk(nltk.pos_tag(nltk.word_tokenize(sent))):\n",
-    "            print(chunk)\n",
+    "            if all:\n",
+    "                print(chunk)\n",
     "            if type(chunk) is nltk.tree.Tree:\n",
-    "                print('==', chunk.label(), ' '.join(c[0] for c in chunk.leaves()))\n",
+    "                print(chunk.label(), ' '.join(c[0] for c in chunk.leaves()))\n",
+    "            elif chunk[1] == 'CD':\n",
+    "                print('CD', chunk[0])\n",
     "\n",
-    "extract_entities(sentence)"
+    "extract_entities(sentence, all=False)"
    ]
   },
   {
